# otus-cpp-ci-cd

./: CMakeLists.txt  README.md  main.cpp  version.h.in
.github/workflows/: release.yml
tests/: CMakeLists.txt  test_version.cpp
